--- a/about.html
+++ b/about.html
@@ -11,6 +11,11 @@
     <meta name="keywords" content="hotel, boston hotel, new england hotel" />
     <title>Hotel BT | About</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
   </head>
   <body>
     <header>
